kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tictacdevsecops
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tictacdevsecops
  template:
    metadata:
      labels:
        app: tictacdevsecops
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: tictacdevsecops
          image: ghcr.io/tresor242/tictacdevsecops:5d86b20bdd768c39973fdcf4ed42167a8c3b4c4a
          ports:
            - containerPort: 80
