kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tictacdevsecops-service
  namespace: production
spec:
  selector:
    app: tictacdevsecops
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
