kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tictacdevsecops-ingress
  namespace: production
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - tictacdevsecops.tresorelila.com
      secretName: tictacdevsecops-tls
  rules:
    - host: tictacdevsecops.tresorelila.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tictacdevsecops-service
                port:
                  number: 80
